[package]
name = "buaa_boya_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
buaa_api = { git = "https://github.com/fontlos/buaa-api", features = ["table"], rev = "203f0bd" }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = "1.39.2"